// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShortListDropDown modal is visible when merge is required 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (2)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
        "
>
    <i
        className="material-icons top-bar-dropdown-list--close-btn"
        onClick={[Function]}
    >
        clear
    </i>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <p
            className="tc Text Text__body Text__body--color-fersken--weight-semibold--transform-uppercase"
        >
            Huskeliste (2)
        </p>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
        className="top-bar-dropdown-list--elements"
    >
        <span>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title1
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid2"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid2",
                                    "taxonomy_description": "some description2",
                                    "title": "some title2",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid2"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title2
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description2
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget2
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
        </span>
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list contains more than 3 elements, elements are added to top of list 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (4)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
        "
>
    <i
        className="material-icons top-bar-dropdown-list--close-btn"
        onClick={[Function]}
    >
        clear
    </i>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <p
            className="tc Text Text__body Text__body--color-fersken--weight-semibold--transform-uppercase"
        >
            Huskeliste (4)
        </p>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
        className="top-bar-dropdown-list--elements"
    >
        <span>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid4"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid4",
                                    "taxonomy_description": "some description4",
                                    "title": "some title4",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid4"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title4
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description4
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget4
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid3"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid3",
                                    "taxonomy_description": "some description3",
                                    "title": "some title3",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid3"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title3
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description3
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget3
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid2"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid2",
                                    "taxonomy_description": "some description2",
                                    "title": "some title2",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid2"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title2
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description2
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget2
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title1
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
        </span>
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list contains single element 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (1)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
        "
>
    <i
        className="material-icons top-bar-dropdown-list--close-btn"
        onClick={[Function]}
    >
        clear
    </i>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <p
            className="tc Text Text__body Text__body--color-fersken--weight-semibold--transform-uppercase"
        >
            Huskeliste (1)
        </p>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center d-none"
    />
    <div
        className="top-bar-dropdown-list--elements"
    >
        <span>
            <div
                className="top-bar-dropdown-list-element"
            >
                <div
                    className="top-bar-dropdown-list-element--cover-image"
                >
                    <a
                        className="list-card-nohover"
                        href="/værk/pid1"
                        onClick={[Function]}
                    >
                        <BookCover
                            book={
                                Object {
                                    "pid": "pid1",
                                    "taxonomy_description": "some description1",
                                    "title": "some title1",
                                  }
                            }
                            hideCoverText={true}
                        />
                    </a>
                </div>
                <div
                    className="top-bar-dropdown-list-element--text"
                >
                    <div
                        className="top-bar-dropdown-list-element--header"
                    >
                        <a
                            className="list-card-nohover"
                            href="/værk/pid1"
                            onClick={[Function]}
                        >
                            <react-truncate-markup
                                lines={1}
                            >
                                <span>
                                    some title1
                                </span>
                            </react-truncate-markup>
                        </a>
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--taxonomy-description"
                    >
                        some description1
                    </div>
                    <div
                        className="top-bar-dropdown-list-element--origin"
                    >
                        Minder om noget1
                    </div>
                </div>
                <i
                    className="material-icons remove-btn"
                    onClick={[Function]}
                >
                    clear
                </i>
            </div>
        </span>
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;

exports[`ShortListDropDown short list is empty and merge modal is hidden 1`] = `
Array [
  <div
    className="undefined top-bar-dropdown-list"
    onClick={[Function]}
>
    <span
        className="short-badge"
    >
        (0)
    </span>
</div>,
  <div
    className="top-bar-dropdown-list--content text-left
         slide-out
         empty-list"
>
    <i
        className="material-icons top-bar-dropdown-list--close-btn"
        onClick={[Function]}
    >
        clear
    </i>
    <a
        className="list-card-nohover"
        href="/huskeliste"
        onClick={[Function]}
    >
        <p
            className="tc Text Text__body Text__body--color-fersken--weight-semibold--transform-uppercase"
        >
            Huskeliste (0)
        </p>
    </a>
    <div
        className="top-bar-dropdown-list--empty-text text-center "
    >
        Din huskeliste er tom
    </div>
    <div
        className="top-bar-dropdown-list--footer"
    >
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Gå til huskeliste
            </button>
        </div>
        <div
            onClick={[Function]}
        >
            <button
                className="
                  btn Button Button__medium Button__tertiary "
                disabled={false}
            >
                Bestil hele listen
            </button>
        </div>
    </div>
</div>,
]
`;
